// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render Planet Cards if passed correct props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    climate="dry"
    name="earth"
    population={1000}
    residents={
        Array [
            "bob",
            "jim",
            "joe",
          ]
    }
    terrain="ground"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <article
        className="planets"
>
        <h1>
                 
                earth
                 
        </h1>
        <Button
                card={undefined}
                controlFunc={undefined}
                name="❤︎"
        />
        <h4>
                 
                ground
                 
        </h4>
        <h5>
                 
                1000
                 
        </h5>
        <h5>
                 
                ground
                 
        </h5>
        <p>
                bob
        </p>
        <p>
                jim
        </p>
        <p>
                joe
        </p>
        <h3>
                 
                dry
                 
        </h3>
</article>,
      "className": "card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
             
            earth
             
</h1>,
          <Button
            card={undefined}
            controlFunc={undefined}
            name="❤︎"
/>,
          <h4>
             
            ground
             
</h4>,
          <h5>
             
            1000
             
</h5>,
          <h5>
             
            ground
             
</h5>,
          Array [
            <p>
              bob
</p>,
            <p>
              jim
</p>,
            <p>
              joe
</p>,
          ],
          <h3>
             
            dry
             
</h3>,
        ],
        "className": "planets",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "earth",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "earth",
            " ",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "card": undefined,
            "controlFunc": undefined,
            "name": "❤︎",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "ground",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "ground",
            " ",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              1000,
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            1000,
            " ",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "ground",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "ground",
            " ",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": "bob",
          },
          "ref": null,
          "rendered": "bob",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": "jim",
          },
          "ref": null,
          "rendered": "jim",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": "joe",
          },
          "ref": null,
          "rendered": "joe",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "dry",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "dry",
            " ",
          ],
          "type": "h3",
        },
      ],
      "type": "article",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <article
          className="planets"
>
          <h1>
                     
                    earth
                     
          </h1>
          <Button
                    card={undefined}
                    controlFunc={undefined}
                    name="❤︎"
          />
          <h4>
                     
                    ground
                     
          </h4>
          <h5>
                     
                    1000
                     
          </h5>
          <h5>
                     
                    ground
                     
          </h5>
          <p>
                    bob
          </p>
          <p>
                    jim
          </p>
          <p>
                    joe
          </p>
          <h3>
                     
                    dry
                     
          </h3>
</article>,
        "className": "card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
               
              earth
               
</h1>,
            <Button
              card={undefined}
              controlFunc={undefined}
              name="❤︎"
/>,
            <h4>
               
              ground
               
</h4>,
            <h5>
               
              1000
               
</h5>,
            <h5>
               
              ground
               
</h5>,
            Array [
              <p>
                bob
</p>,
              <p>
                jim
</p>,
              <p>
                joe
</p>,
            ],
            <h3>
               
              dry
               
</h3>,
          ],
          "className": "planets",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "earth",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "earth",
              " ",
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "card": undefined,
              "controlFunc": undefined,
              "name": "❤︎",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "ground",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "ground",
              " ",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                1000,
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              1000,
              " ",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "ground",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "ground",
              " ",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "bob",
            },
            "ref": null,
            "rendered": "bob",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "jim",
            },
            "ref": null,
            "rendered": "jim",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "joe",
            },
            "ref": null,
            "rendered": "joe",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "dry",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "dry",
              " ",
            ],
            "type": "h3",
          },
        ],
        "type": "article",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should render people Cards if passed correct props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    homeWorldName="earth"
    name="sue"
    population="1000"
    species="human"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <article
        className="people"
>
        <h1>
                 
                sue
                 
        </h1>
        <Button
                card={undefined}
                controlFunc={undefined}
                name="❤︎"
        />
        <h4>
                 
                earth
                 
        </h4>
        <h5>
                 
                1000
                 
        </h5>
        <h5>
                 
                human
                 
        </h5>
</article>,
      "className": "card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
             
            sue
             
</h1>,
          <Button
            card={undefined}
            controlFunc={undefined}
            name="❤︎"
/>,
          <h4>
             
            earth
             
</h4>,
          <h5>
             
            1000
             
</h5>,
          <h5>
             
            human
             
</h5>,
        ],
        "className": "people",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "sue",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "sue",
            " ",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "card": undefined,
            "controlFunc": undefined,
            "name": "❤︎",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "earth",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "earth",
            " ",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "1000",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "1000",
            " ",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "human",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "human",
            " ",
          ],
          "type": "h5",
        },
      ],
      "type": "article",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <article
          className="people"
>
          <h1>
                     
                    sue
                     
          </h1>
          <Button
                    card={undefined}
                    controlFunc={undefined}
                    name="❤︎"
          />
          <h4>
                     
                    earth
                     
          </h4>
          <h5>
                     
                    1000
                     
          </h5>
          <h5>
                     
                    human
                     
          </h5>
</article>,
        "className": "card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
               
              sue
               
</h1>,
            <Button
              card={undefined}
              controlFunc={undefined}
              name="❤︎"
/>,
            <h4>
               
              earth
               
</h4>,
            <h5>
               
              1000
               
</h5>,
            <h5>
               
              human
               
</h5>,
          ],
          "className": "people",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "sue",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "sue",
              " ",
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "card": undefined,
              "controlFunc": undefined,
              "name": "❤︎",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "earth",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "earth",
              " ",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "1000",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "1000",
              " ",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "human",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "human",
              " ",
            ],
            "type": "h5",
          },
        ],
        "type": "article",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should render vehicles Cards if passed correct props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    model="red"
    name="subru"
    passengers="5"
    vehicleClass="5 stars"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <article
        className="vehicle"
>
        <h1>
                 
                subru
                 
        </h1>
        <Button
                card={undefined}
                controlFunc={undefined}
                name="❤︎"
        />
        <h4>
                 
                red
                 
        </h4>
        <h5>
                 
                5
                 
        </h5>
        <h5>
                 
                5 stars
                 
        </h5>
</article>,
      "className": "card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
             
            subru
             
</h1>,
          <Button
            card={undefined}
            controlFunc={undefined}
            name="❤︎"
/>,
          <h4>
             
            red
             
</h4>,
          <h5>
             
            5
             
</h5>,
          <h5>
             
            5 stars
             
</h5>,
        ],
        "className": "vehicle",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "subru",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "subru",
            " ",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "card": undefined,
            "controlFunc": undefined,
            "name": "❤︎",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "red",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "red",
            " ",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "5",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "5",
            " ",
          ],
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "5 stars",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            " ",
            "5 stars",
            " ",
          ],
          "type": "h5",
        },
      ],
      "type": "article",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <article
          className="vehicle"
>
          <h1>
                     
                    subru
                     
          </h1>
          <Button
                    card={undefined}
                    controlFunc={undefined}
                    name="❤︎"
          />
          <h4>
                     
                    red
                     
          </h4>
          <h5>
                     
                    5
                     
          </h5>
          <h5>
                     
                    5 stars
                     
          </h5>
</article>,
        "className": "card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
               
              subru
               
</h1>,
            <Button
              card={undefined}
              controlFunc={undefined}
              name="❤︎"
/>,
            <h4>
               
              red
               
</h4>,
            <h5>
               
              5
               
</h5>,
            <h5>
               
              5 stars
               
</h5>,
          ],
          "className": "vehicle",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "subru",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "subru",
              " ",
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "card": undefined,
              "controlFunc": undefined,
              "name": "❤︎",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "red",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "red",
              " ",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "5",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "5",
              " ",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                " ",
                "5 stars",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              " ",
              "5 stars",
              " ",
            ],
            "type": "h5",
          },
        ],
        "type": "article",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
